move rx test